UI/src/stylesheet.scss
/*
 *  Copyright © 2024 Travelonium AB
 *
 *  This file is part of Arcadeia.
 *
 *  Arcadeia is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as published
 *  by the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Arcadeia is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with Arcadeia. If not, see <https://www.gnu.org/licenses/>.
 *
 */

 @use "bootstrap-icons/font/bootstrap-icons.css";
 @use "video.js/dist/video-js.css";
 @use "animate.css/animate.css";

// Your variable overrides can go here, e.g.:
// $h1-font-size: 3rem;
$loading-z-index: 1;
$upload-zone-overlay-z-index: 2;
$dropdown-link-active-bg: transparent;
$dropdown-link-active-color: var(--bs-dropdown-color);

@import "bootswatch/dist/spacelab/variables.scss";
@import "bootstrap/scss/bootstrap.scss";
@import "bootswatch/dist/spacelab/bootswatch.scss";

.logo-text {

    $blue: #1871b9;
    $red: #e34220;
    $yellow: #f4ce0c;
    $green: #17b152;

    /* fill: $green; */

    .a-1 {
        fill: $red;
    }

    .r {
        fill: $red;
    }

    .c {
        fill: $yellow;
    }

    .a-2 {
        fill: $yellow;
    }

    .d {
        fill: $green;
    }

    .e {
        fill: $green;
    }

    .i {
        fill: $blue;
    }

    .a-3 {
        fill: $blue;
    }
}

.breadcrumb {
    border: 1px solid rgba($secondary, .25);
    border-radius: var(--bs-border-radius);
}

@include color-mode(light) {

    .media-container {
        &:hover {
            .card {
                border: 1px solid rgba($black, 0.25);
                box-shadow: 0 .125rem .25rem rgba($black, .075);
            }
        }
    }

    .editable-text {
        &:hover {
            -webkit-box-shadow: inset 0px -3px 0px rgba($black, 0.1);
            -moz-box-shadow: inset 0px -3px 0px rgba($black, 0.1);
            box-shadow: inset 0px -3px 0px rgba($black, 0.1);

            .underline {
                background-color: rgba($black, 0.1);
            }
        }

        &.editing {

            .underline {
                background-color: rgba(#3498db, 1.0);
            }
        }
    }

    .sort-dropdown {

        &.overridden {
            .dropdown-toggle {
                color: black;
            }
        }
    }
}

@include color-mode(dark) {
    .breadcrumb {
        .breadcrumb-item {
            a {
                &:hover {
                    color: rgba($white, 0.7);
                }
            }
        }
    }

    .media-container {
        &:hover {
            .card {
                border: 1px solid rgba($white, 0.25);
                box-shadow: 0 .125rem .75rem rgba($white, 0.075);
            }
        }
    }

    .editable-text {

        &:hover {
            -webkit-box-shadow: inset 0px -3px 0px rgba($white, 0.1);
            -moz-box-shadow: inset 0px -3px 0px rgba($white, 0.1);
            box-shadow: inset 0px -3px 0px rgba($white, 0.1);

            .underline {
                background-color: rgba($black, 0.1);
            }
        }

        &.editing {

            .underline {
                background-color: rgba(#3498db, 1.0);
            }
        }
    }

    .sort-dropdown {

        &.overridden {
            .dropdown-toggle {
                color: white;
            }
        }
    }
}

@mixin flag-styles {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    text-shadow: 0 0 1px $black;
    font-style: normal;
    font-variant: normal;
    font-weight: normal;
    font-size: large;
    line-height: 1;
    margin-right: 5px;
    position: relative;
    cursor: pointer;
    display: none;
    opacity: .4;

    &.set {
        opacity: 1;
    }

    &:hover {
        opacity: 1;
    }

    &.favorite {
        opacity: 1;

        &.set {
            color: yellow;

            &:hover {
                color: white;
            }
        }

        &:hover {
            color: yellow;
        }
    }

    &.expand {
        display: unset;
        font-size: unset;
    }
}

.toolbar {

    .flag,
    .icon,
    .button {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        text-shadow: none;
        font-style: normal;
        font-variant: normal;
        font-weight: normal;
        font-size: x-large;
        position: relative;
        line-height: 1;
    }

    .flag,
    .icon {
        &:not(.set) {
            opacity: 0.3;
        }

        &.disabled {
            color: $btn-link-disabled-color;
            opacity: $btn-disabled-opacity;
        }
    }

    :disabled {

        .flag,
        .icon {
            opacity: $btn-disabled-opacity;
            color: $btn-link-disabled-color;
        }
    }
}

.media-viewer {

    .flags {
        top: 5px;
        left: 5px;
        right: 5px;
        position: absolute;
        vertical-align: middle;

        .flag {
            color: white;
        }
    }

    .flag {
        @include flag-styles;

        font-size: xx-large;
    }

    .modal-body:hover {
        .flag {
            display: unset;
        }
    }
}
/* ... */

